<resources>
    <string name="app_name">Inetify</string>
    <string name="hello">Inetify</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_status_unknown">Wifi status unknown</string>
    <string name="wifi_disconnected">Wifi is not connected</string>
	<string name="disconnected">Not connected</string>
	<string name="dialog_default_title">Dialog</string>
	<string name="main_title_test">Test Connectivity</string>
	<string name="main_summary_test">Manual test of internet connectivity</string>
	<string name="main_last_result">%1$s %4$s (%3$s)</string>
	<string name="main_title_settings">Settings</string>
	<string name="main_summary_settings">Notification tone and other settings</string>
	<string name="main_title_ignorelist">Ignored Wifi Networks</string>
	<string name="main_summary_ignorelist">Manage ignored Wifi Networks</string>
	<string name="main_title_locationlist">Wifi Locations</string>
	<string name="main_summary_locationlist">Manage Wifi Locations</string>
	<string name="main_title_help">Information</string>
	<string name="main_summary_help">Small manual and infos about Inetify</string>
	<string name="main_testing_title">Testing...</string>
	<string name="main_testing_message">Testing internet connectivity, please wait</string>
	<string name="ignorelist_label">Ignored Wifi Networks</string>
	<string name="ignorelist_add_ignored_wifi">Ignore Wifi Network</string>
	<string name="ignorelist_ignore_wifi">Ignore Wifi %1$s from now on</string>
	<string name="ignorelist_context_delete">Remove</string>
	<string name="ignorelist_confirm_delete">Remove from ignored Wifi Networks?</string>
	<string name="locationlist_label">Wifi Locations</string>
	<string name="locationlist_add_wifi_location">Add Wifi Location</string>
	<string name="locationlist_add_location_of_wifi">Add location of Wifi %1$s</string>
	<string name="locationlist_context_rename">Rename</string>
	<string name="locationlist_context_delete">Remove</string>
	<string name="locationlist_input_rename">Rename Wifi location to:</string>
	<string name="locationlist_confirm_delete">Remove Wifi location?</string>
	<string name="locationlist_added_wifi_location">Added location of Wifi %1$s</string>
	<string name="locationlist_not_all_providers_enabled">
		Not all location providers are enabled, finding an accurate location
		might not be possible.
	</string>
    <string name="locationmapview_label">Location</string>
    <string name="locationmapview_location">Location</string>
    <string name="locationmapview_label_name">Location of Wifi %1$s</string>
    <string name="locationmapview_status1_searching">Searching...</string>
    <string name="locationmapview_status1_found">Location added.</string>
    <string name="locationmapview_status2_waiting">Waiting for location.</string>
    <string name="locationmapview_status2_current">Accuracy: %1$s m</string>
    <string name="locationmapview_status1_notfound">Not found.</string>
    <string name="locationmapview_status2_notfound">No accurate location found</string>
    <string name="locationmapview_could_not_get_accurate_location">Could not get an accurate location.</string>
    <string name="infodetail_na">N/A</string>
    <string name="infodetail_label">Notification Details</string>
    <string name="infodetail_ok">OK</string>
    <string name="infodetail_nok">Not OK</string>
    <string name="infodetail_prop_timestamp">Time</string>
    <string name="infodetail_prop_connection">Connection</string>
    <string name="infodetail_prop_ignore">Ignore</string>
    <string name="infodetail_prop_internetsite">Internet Site</string>
    <string name="infodetail_prop_expectedtitle">Expected Page Title</string>
    <string name="infodetail_prop_foundtitle">Found Page Title</string>
    <string name="infodetail_value_timestamp">%1$s</string>
    <string name="infodetail_value_connection">%1$s (%2$s)</string>
    <string name="infodetail_value_noconnection">Not connected</string>
    <string name="infodetail_value_ignore">Ignore Wifi %1$s from now on</string>
    <string name="infodetail_value_ignored">Wifi %1$s is ignored</string>
    <string name="infodetail_value_internetsite">%1$s</string>
    <string name="infodetail_value_expectedtitle">%1$s</string>
    <string name="infodetail_value_foundtitle">%1$s</string>
    <string name="infodetail_value_exception">Error getting page title: %1$s</string>
    <string name="infodetail_error_open_site">Cannot open site: %1$s</string>
    <string name="notification_ok_title">Internet connectivity OK</string>
    <string name="notification_ok_text">Internet connectivity is OK</string>
    <string name="notification_nok_title">No internet connectivity!</string>
    <string name="notification_nok_text">Internet connectivity is not OK!</string>
    <string name="notification_next_wifi_title">Next Wifi: %1$s</string>
    <string name="notification_next_wifi_text">Distance: %1$s m - Accuracy: %2$s m</string>
    <string name="help_label">Information</string>
    <string name="help"><b>Features</b>
		\n\n<b>Test Connectivity</b> tests internet access. It does this by downloading the
		page title of an internet site and comparing it with an expected title.
		\nAlso shows the result of the last manual or automatic test.
		\nIf enabled in the settings, Inetify runs this test automatically whenever
		your phone connects to a Wifi network and gives a notification depending on the result.
		\n\n<b>Ignored Wifi Networks</b> allows to exclude Wifi networks from the automatic
		internet connectivity test. Any Wifi network in the list will be ignored.
		\nTo add a Wifi network to the list, click on <b>Ignore Wifi Network</b> while
		the phone is connected to that Wifi network. This can also be done from a
		notification.
		\nTo remove a Wifi network from the list, click long on the item and choose
		<b>Remove</b>.
		\n\n<b>Wifi Locations (experimental)</b> allows to add the location of a Wifi network.
		When the phone is near enough one of the locations in the list, Wifi is automatically 
		activated or a notification given, or both. When none of the locations are near,
		Wifi is deactivated, which can save battery.
		\n<b>This feature is experimental: Depending on the accuracy of localization, it may
		be unreliable.</b>
		\nTo add a Wifi location to the list, click on <b>Add Wifi Location</b> while the
		phone is connected to that Wifi network. Inetify then finds the current
		location, shows it on a map and adds it to the list.
		When clicking on a Wifi location in the list, the location is shown on a map.
		\nTo remove a Wifi location from the list or rename it, click long on the item
		and choose <b>Remove</b> or <b>Rename</b>, respectively.
		\nPlease note, that the map data is downloaded from the internet, and
		can cause costs when using a mobile data connection.
		\n\n<b>Settings</b>
		\n\n<b>Notifications Enabled</b> Enables or disables notifications about internet
		access of a Wifi network.
		\n\n<b>Only if not OK</b> If set, a notification is given only if internet access
		is not available.
		\n\n<b>Internet Site</b> The internet site whose page title is compared with the
		expected title, to verify internet access. Default is www.google.com.
		\n\n<b>Page Title</b> The page title that the internet site is expected to have.
		Default is Google.
		\n\n<b>Test Delay</b> After a Wifi connection was established, Inetify will wait
		for this time in seconds before testing internet connectivity. This can help to
		avoid \"false errors\" if for example a firewall app needs some extra time to set 
		up connections.
		\n\n<b>Notifications Enabled</b> Enables or disables notifications about near
		Wifi locations.
		\n\n<b>Auto Wifi</b> If set, Wifi is activated when the nearest Wifi location is
		near enough, and deactivated when no Wifi location is near enough. Wifi is not
		deactivated while it is connected to a Wifi network.
		\n\n<b>Use GPS</b> If set, GPS is used additionally to network based locations.
		GPS is very accurate, but it does not work indoors and uses a lot of battery,
		most likely more than what is saved by switching off Wifi. So this really is
		just an experimental feature.
		\n\n<b>Max. Distance</b> Is the distance to the nearest Wifi location not longer
		than this setting, the notification is given and/or Wifi activated. Is the distance
		longer, Wifi is deactivated.
		\nWith a short max. distance, the risk that a Wifi location is not recognized
		because of inaccurate localization is higher. GPS increases accuracy, but it works
		reliably only outdoors.
		\n\n<b>Check Interval</b> The time between location checks. When using GPS,
		longer intervals decrease battery usage.
		\n\n<b>Notification Tone</b> The tone that is used for notifications.
		\n\n<b>Notification Light</b> If set, the LED flashes on notifications.
		\n\nPlease send feedback to:
		\ngmdode@gmail.com
		\n\nProject and source code:
		\nhttp://code.google.com/p/inetify
		\n\nInetify ist licensed under the Apache License 2.0.
		\n\nThank you for installing Inetify!
		\n\n<b>Thanks also to:</b>
		\n\nThe Wifi locations are shown with OpenStreetMap/osmdroid:
		\nhttp://code.google.com/p/osmdroid
		\n\nTo load and parse the internet site and get the page title from it, Inetify uses jsoup: 
		\nhttp://jsoup.org
		\n\nThe Inetify icons were composed of two icons from Oxygen Icons:
		\nhttp://www.oxygen-icons.org
		\n
    </string>
    <string name="settings_label">Settings</string>
    <string name="category_internet_connectivity">Internet Connectivity Notifications</string>
    <string name="default_value_enabled_preference">true</string>
    <string name="title_enabled_preference">Notifications Enabled</string>
    <string name="summary_enabled_preference">Enable or disable notifications</string>
    <string name="default_value_only_nok_preference">true</string>
    <string name="title_only_nok_preference">Only if not OK</string>
    <string name="summary_only_nok_preference">Notification only if internet connectivity is not OK</string>
    <string name="default_value_server_preference">www.google.com</string>
    <string name="title_server_preference">Internet Site</string>
    <string name="summary_server_preference">Internet site to test connectivity</string>
    <string name="dialog_title_server_preference">Enter the site</string>
    <string name="default_value_title_preference">Google</string>
    <string name="title_title_preference">Page Title</string>
    <string name="summary_title_preference">All or a part of the page title that the internet site is expected to have</string>
    <string name="dialog_title_title_preference">Enter the title</string>
	<string name="default_value_test_delay_preference">10</string>
	<string name="title_test_delay_preference">Test Delay</string>
	<string name="summary_test_delay_preference">Delay before testing internet connectivity after Wifi connected</string>
	<string name="dialog_title_test_delay_preference">Enter delay in seconds</string>
    <string name="category_wifi_location">Wifi Location Notifications</string>
	<string name="default_value_wifi_location_enabled_preference">false</string>
	<string name="title_wifi_location_enabled_preference">Notifications Enabled</string>
	<string name="summary_wifi_location_enabled_preference">Enable or disable notifications (experimental)</string>
	<string name="default_value_auto_wifi_preference">false</string>
    <string name="default_value_tone_preference"></string>
    <string name="title_tone_preference">Notification Tone</string>
    <string name="summary_tone_preference">Select notification tone</string>
    <string name="default_value_light_preference">false</string>
    <string name="title_light_preference">Notification LED</string>
    <string name="summary_light_preference">Flashes on notification</string>
</resources>